# RustyWebService

./: .gitignore  README.md
webservice/: Cargo.toml
webservice/src/: db_access.rs  errors.rs  handlers.rs  main.rs  models.rs  routers.rs  state.rs
webservice/src/db_access/: course.rs
webservice/src/handlers/: course.rs  general.rs
webservice/src/models/: course.rs
