[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

[dependencies]
actix-web = "4"
actix-rt = "2.6.0"
dotenv = "0.15.0"
openssl = {version = "0.10.38", features = ["vendored"]}
serde = {version = "1.0.132", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}
syn = { version = "1.0", features = ["parsing", "printing", "derive"] }
sqlx = {version = "0.5", default_features = false, features = [
    "postgres", 
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    ]}


[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"